--- a/etc/mysql/my.cnf.jinja
+++ b/etc/mysql/my.cnf.jinja
@@ -3,12 +3,15 @@
 
 [mysqld_safe]
 nice = 0
+#syslog
 
 [mysqld]
 server-id = {{ grains['server_id'] }}
 user = mysql
 pid-file = /var/run/mysqld/mysqld.pid
 socket = /var/run/mysqld/mysqld.sock
+log-error = /var/log/mysql/error.log
+relay-log = mysqld-relay-bin
 basedir = /usr
 datadir = /var/lib/mysql
 lc-messages-dir = /usr/share/mysql
@@ -58,7 +61,7 @@ key_buffer_size = 32M
 
 #   Maximum size of packet or string, sets max BLOB size. Default 1M 
 #   Maybe can disable, but should sync with mysqldump?
-max_allowed_packet = 16M
+max_allowed_packet = 32M
 
 #   Number of threads to retain for reuse.  Default 0
 thread_cache_size = 8
