--- a/etc/openvpn/server.conf.jinja
+++ b/etc/openvpn/server.conf.jinja
@@ -298,3 +298,7 @@ verb 3
 # sequential messages of the same message
 # category will be output to the log.
 ;mute 20
+
+{%- if pillar.get('openvpn_crl') %}
+crl-verify crl.pem
+{%- endif %}
