--- a/etc/hosts.jinja
+++ b/etc/hosts.jinja
@@ -42,7 +42,16 @@
             {%- if tun0_ip %}
                 {{tun0_ip}} {{container_fqdn}}.vpn {{container_fqdn}}{% for alias in container.get('aliases', []) %} {{alias}}{% endfor %}
             {%- endif %}
+
+
         {%- endfor %}
     {%- endif %}
 {%- endfor %}
+
+# The following lines are desirable for IPv6 capable hosts
+::1     ip6-localhost ip6-loopback
+fe00::0 ip6-localnet
+ff00::0 ip6-mcastprefix
+ff02::1 ip6-allnodes
+ff02::2 ip6-allrouters
 {#- vim: set filetype=jinja : #}
